sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:14: error: value ++ is not a member of Int
    i++;
     ^